# ripple-rust-baremetal

./: .env  Cargo.toml
.githooks/: pre-push
.github/workflows/: linter.yml
src/: client.rs  crypto.rs  encoding.rs  errors.rs  lib.rs  main.rs  transactions.rs  types.rs  verification.rs  websocket.rs
