[package]
name = "ripple-rust-baremetal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bs58 = { version = "0.5.0", default-features = false, features = ["check", "alloc"] }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["alloc", "zeroize"] }
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
ripemd = "0.1"
secp256k1 = { version = "0.30.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tungstenite = "0.23"

[dev-dependencies]
tokio-test = "0.4"
